table part complete

--- a/Week-1/Assignment2/index.html
+++ b/Week-1/Assignment2/index.html
@@ -34,6 +34,34 @@
         <i class="las la-ellipsis-h">Music</i>
       </div>
     </div>
+
+    <table>
+      <tr>
+        <td>1.One Dance</td>
+        <td>Crake feat CatKid & Cyla</td>
+        <td>2:54</td>
+        <td><span>Catty Cloud Sync</span></td>
+      </tr>
+      <tr>
+        <td>2.Panda</td>
+        <td>Catty</td>
+        <td>4:06</td>
+        <td><span>Catty Cloud Sync</span></td>
+      </tr>
+      <tr>
+        <td>3.Can't Stop the felling</td>
+        <td>Catty Cimberlake</td>
+        <td>3:35</td>
+        <td><span>Catty Cloud Sync</span></td>
+      </tr>
+      <tr>
+        <td>4.Work from Home</td>
+        <td>Cat Harmony feat Colla</td>
+        <td>3:56</td>
+        <td><span>Catty Cloud Sync</span></td>
+      </tr>
+    </table>
+
     <i class="las la-step-backward"></i>
     <i class="las la-step-forward"></i>
     <i class="las la-undo-alt"></i>
