bottom bar done

--- a/Week-1/Assignment2/index.html
+++ b/Week-1/Assignment2/index.html
@@ -62,9 +62,16 @@
       </tr>
     </table>
 
-    <i class="las la-step-backward"></i>
-    <i class="las la-step-forward"></i>
-    <i class="las la-undo-alt"></i>
-    <i class="las la-random"></i>
+    <div class="bottom-bar">
+      <img src="./assets/cattyboard.jpg" alt="" srcset="" />
+      <h6>
+        If it A'nt Love
+        <p>Catson Derulo</p>
+      </h6>
+      <i class="las la-step-backward"></i>
+      <i class="las la-step-forward"></i>
+      <i class="las la-undo-alt"></i>
+      <i class="las la-random"></i>
+    </div>
   </body>
 </html>
