basic data added to html

--- a/Week-2/assignment1/index.html
+++ b/Week-2/assignment1/index.html
@@ -4,9 +4,49 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Memories</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    
+    <h1>What Is Memory?</h1>
+    <p>
+      Memory refers to the psychological processes of acquiring, storing,
+      retaining, and later retrieving information. There are three major
+      processes involved in memory: encoding, storage, and retrieval. Human
+      memory involves the ability to both preserve and recover information.
+      However, this is not a flawless process. Sometimes people forget or
+      misremember things. Other times, information is not properly encoded in
+      memory in the first place.
+    </p>
+    <h1>How Memories Are Formed</h1>
+    <p>
+      In order to create a new memory, information must be changed into a usable
+      form, which occurs through a process known as encoding. Once the
+      information has been successfully encoded, it must be stored in memory for
+      later use. Researchers have long believed that memories form due to
+      changes in brain neurons (nerve cells). Our understanding today is that
+      memories are created through the connections that exist between these
+      neurons—either by strengthening these connections or through the growth of
+      new connections.
+    </p>
+    <h1>How Long Do Memories Last?</h1>
+    <p>
+      You can't discuss what memory is without also talking about how long
+      memories last. Some memories are very brief, just seconds long, and allow
+      people to take in sensory information about the world. Short-term memories
+      are a bit longer and last about 20 to 30 seconds. These memories mostly
+      consist of the information people are currently focusing on and thinking
+      about. Some memories are capable of enduring much longer—lasting days,
+      weeks, months, or even decades. Most of these long-term memories lie
+      outside of immediate awareness but can be drawn into consciousness when
+      needed.
+    </p>
+    <h1>Why Do We Remember Painful Memories?</h1>
+    <p>
+      Have you ever noticed that many times, painful memories tend to hang on
+      for long periods of time? Research suggests that this is because of
+      increased biological arousal during the negative experience, which
+      increases the longevity of that memory.
+    </p>
   </body>
 </html>
