added line below top heading

--- a/Week-2/assignment1/index.html
+++ b/Week-2/assignment1/index.html
@@ -13,7 +13,7 @@
 
     <!-- Main content -->
     <div class="main">
-      <h1 id="heading">Memories</h1>
+      <div id="heading"><h1>Memories</h1></div>
       <div class="para1 para">
         <h2>What Is Memory?</h2>
         <p>
@@ -353,7 +353,7 @@
 
                     <div class="app-form-group buttons">
                       <button class="app-form-button">CANCEL</button>
-                      <button class="app-form-button">SEND</button>
+                      <button class="app-form-button">SAVE</button>
                     </div>
                   </div>
                 </div>
