paragraph and image shift small screen

--- a/Week-2/assignment1/index.html
+++ b/Week-2/assignment1/index.html
@@ -360,7 +360,7 @@
               </div>
             </div>
             <div class="credits">
-              copied by
+              created & copied by
               <a
                 class="credits-link"
                 href="https://dribbble.com/shots/2666271-Contact"
