--- a/Week-2/assignment1/index.html
+++ b/Week-2/assignment1/index.html
@@ -102,15 +102,25 @@
                       <input
                         class="app-form-control"
                         placeholder="FIRST NAME"
+                        required
                       />
                     </div>
                     <div class="app-form-group">
-                      <input class="app-form-control" placeholder="LAST NAME" />
+                      <input
+                        class="app-form-control"
+                        placeholder="LAST NAME"
+                        required
+                      />
                     </div>
                     <div class="app-form-group">
                       <div class="app-form-control1">
                         Gender :
-                        <input type="radio" name="gender" value="male" />
+                        <input
+                          type="radio"
+                          name="gender"
+                          value="male"
+                          checked
+                        />
                         Male
                         <input type="radio" name="gender" value="female" />
                         Female
@@ -122,7 +132,10 @@
                     <div class="app-form-group">
                       <p>
                         <label class="app-form-control1"
-                          >Date of Memory:<input type="date" name="memoryDate"
+                          >Date of Memory:<input
+                            type="date"
+                            name="memoryDate"
+                            required
                         /></label>
                       </p>
                     </div>
@@ -130,6 +143,9 @@
                       <input
                         class="app-form-control"
                         placeholder="CONTACT NO"
+                        type="tel"
+                        minlength="10"
+                        required
                       />
                     </div>
 
@@ -137,6 +153,8 @@
                       <input
                         class="app-form-control"
                         placeholder="Memory Details"
+                        required
+                        minlength="20"
                       />
                     </div>
 
@@ -144,8 +162,8 @@
                       Location :
                       <br />
 
-                      <select name="nationality">
-                        <option value="">-- select one --</option>
+                      <select name="nationality" required>
+                        <option value="">--please select one --</option>
                         <option value="afghan">Afghan</option>
                         <option value="albanian">Albanian</option>
                         <option value="algerian">Algerian</option>
