--- a/Week-2/assignment1/index.html
+++ b/Week-2/assignment1/index.html
@@ -14,7 +14,7 @@
     <!-- Main content -->
     <div class="main">
       <div id="heading"><h1>Memories</h1></div>
-      <div class="para1 para">
+      <article class="para1 para">
         <h2>What Is Memory?</h2>
         <p>
           Memory refers to the psychological processes of acquiring, storing,
@@ -25,8 +25,8 @@
           misremember things. Other times, information is not properly encoded
           in memory in the first place.
         </p>
-      </div>
-      <div class="para2 para">
+      </article>
+      <article class="para2 para">
         <div>
           <h2>How Memories Are Formed</h2>
           <p>
@@ -40,8 +40,8 @@
           </p>
         </div>
         <img src="./assets/brain (3).jpg" alt="brain" />
-      </div>
-      <div class="para3 para">
+      </article>
+      <article class="para3 para">
         <div>
           <h2>How Long Do Memories Last?</h2>
           <p>
@@ -57,8 +57,8 @@
           </p>
         </div>
         <img src="./assets/br (4).jpg" alt="brain" />
-      </div>
-      <div class="para para2">
+      </article>
+      <article class="para para2">
         <div>
           <h2>Why Do We Remember Painful Memories?</h2>
           <p>
@@ -69,7 +69,7 @@
           </p>
         </div>
         <img src="./assets/br (5).jpg" alt="brain" />
-      </div>
+      </article>
 
       <!-- Form Start -->
       <form>
@@ -127,7 +127,12 @@
                       </div>
                     </div>
                     <div class="app-form-group">
-                      <input class="app-form-control" placeholder="EMAIL" />
+                      <input
+                        class="app-form-control"
+                        placeholder="EMAIL"
+                        type="email"
+                        required
+                      />
                     </div>
                     <div class="app-form-group">
                       <p>
