--- a/Week-2/assignment2/index.html
+++ b/Week-2/assignment2/index.html
@@ -8,9 +8,12 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="box1 box"></div>
-    <div class="box2 box"></div>
-    <div class="box3 box"></div>
-    <div class="box4 box"></div>
+    <div class="wrap">
+      <div class="box1"></div>
+      <div class="box2"></div>
+      <div class="box3"></div>
+      <div class="box4"></div>
+      <h1>--Hi!--</h1>
+    </div>
   </body>
 </html>
