--- a/Week-3/Assignment4/index.html
+++ b/Week-3/Assignment4/index.html
@@ -5,9 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>Stack and Closures</h1>
+    <form>
+      <h1>Hello JS</h1>
+      <pre id="logger"></pre>
+    </form>
   </body>
   <script src="script.js"></script>
 </html>
