--- a/Week-3/Assignment1/index.html
+++ b/Week-3/Assignment1/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <form>
-      <h1>Hello JS</h1>
+      <h4>Hello JS Console</h4>
       <pre id="logger"></pre>
     </form>
   </body>
