call and bind added styling also added

--- a/Week-3/Assignment2/index.html
+++ b/Week-3/Assignment2/index.html
@@ -4,10 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Call,Bind,Apply</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>Call,Bind ,Apply</h1>
+    <form>
+      <h1>Call,Bind ,Apply</h1>
+      <pre id="logger"></pre>
+    </form>
   </body>
   <script src="script.js"></script>
 </html>
