Basic polyfill for a custom promise completed

--- a/Week-4/Assignment1/index.html
+++ b/Week-4/Assignment1/index.html
@@ -11,6 +11,13 @@
     <form>
       <h1>Hello JS</h1>
       <pre id="logger"></pre>
+      <button id="button">
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        Random number
+      </button>
     </form>
   </body>
   <script src="script.js"></script>
