started from scratch and added html and css

--- a/Week-4/Assignment1/index.html
+++ b/Week-4/Assignment1/index.html
@@ -8,17 +8,11 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <form>
+    <div class="container">
       <h1>Hello JS</h1>
-      <pre id="logger"></pre>
-      <button id="button">
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
-        Random number
-      </button>
-    </form>
+      <p id="text">click button below to change me</p>
+      <button id="button">Random Number</button>
+    </div>
   </body>
   <script src="script.js"></script>
 </html>
