--- a/Week-5/Assignment2/index.html
+++ b/Week-5/Assignment2/index.html
@@ -10,9 +10,8 @@
   <body>
     <form>
       <h1>Hello JS</h1>
-      <pre id="logger"></pre>
+      <p>Please open console</p>
     </form>
   </body>
-  <script src="logger_script.js"></script>
   <script src="script.js"></script>
 </html>
