--- a/Week-7/Assignment 7.4/index.html
+++ b/Week-7/Assignment 7.4/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <form>
-      <h1>Hello JS</h1>
+      <h1>Parenthesis Checker</h1>
       <pre id="logger"></pre>
     </form>
   </body>
