--- a/Week-8/Assignment 8.5/index.html
+++ b/Week-8/Assignment 8.5/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <form>
-      <h1>Max depth of Binary Tree</h1>
+      <h1>Find the Town Judge</h1>
       <pre id="logger"></pre>
     </form>
   </body>
